--- a/index.html
+++ b/index.html
@@ -5,5 +5,11 @@
   <body>
     <h1>Hello</h1>
     <h2>what are you doing today?</h2>
+    <p>
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum impedit,
+      consectetur labore maiores architecto, libero ratione modi unde natus, eum
+      corporis mollitia! Quas reprehenderit, laudantium similique eos recusandae
+      accusamus nemo?
+    </p>
   </body>
 </html>
